# MineHex

./: OPTIMIZATION_AUDIT.md  PERFORMANCE_DEEP_AUDIT.md  PERFORMANCE_PRIORITIES.md  README.md  config.js  index.html  index2.html  main.js  styles.css
assets/: meteor.glb
assets/skin/fp/: model.glb
src/: blockKey.js  blocks.js  config.js  coords.js  falling_nodes.js  geometry.js  hardness.js  input.js  inventoryAvatar.js  keys.js  main.js  physics.js  playerView.js  postprocessing.js  rules.js  scene.js  skinTexture.js  skinUv.js  state.js  worldgen.js  youtube.js
src/celeron/: celeronInput.js
src/mobile/: mobile.css  mobile.js
src/shaders/: AAA_RENDERING_NOTES.md  materials.js  sceneLighting.js
src/sky/: Cargo.toml  build_wasm_pkg.sh  skyAtmosphere.js
src/sky/assets/shaders/: fog.wgsl  full_aurora.wgsl  full_gradient.wgsl  stars.wgsl  sun.wgsl
src/sky/assets/sky_presets/: default.ron  purple.ron
src/sky/bloodmoon/: index.js
src/sky/pkg/: README.md  bevy_sky_gradient.d.ts  bevy_sky_gradient.js  bevy_sky_gradient_bg.wasm.d.ts
src/sky/src/: cycle.rs  lib.rs  sky_material.rs  utils.rs  web.rs
src/sky/wasm/: Cargo.toml  README.md
src/sky/wasm/src/: lib.rs
src/workers/: chunkWorker.js  chunkWorkerCore.js  chunkWorkerPool.js  chunkWorkerTertiary.js
