[package]
name = "bevy_sky_gradient"
version = "0.2.0"
edition = "2024"
keywords = ["bevy", "skybox", "atmosphere", "procedural", "gamedev"]
categories = ["game-development", "rendering"]
license = "MIT or Apache-2.0"
readme = "README.md"
description = "Sky rendering plugin for bevy featuring, sky gradient, aurora / northern lights, stars, sun, day-night cycle"
repository = "https://github.com/TanTanDev/bevy_sky_gradient"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:ron", "dep:bincode"]

[dependencies]
bevy = "0.17"
thiserror = "2"

# optional serialization
serde = { version= "1", features = ["derive"], optional = true }
# to serilalize user readable files
ron = {version = "0.12", optional = true}
# to serialize compact files
bincode = {version = "2", optional = true, features = ["serde"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "std",
    "async_executor",
    "animation",
    "bevy_asset",
    "bevy_anti_alias",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "debug",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "zstd_rust",
] }
wasm-bindgen = "0.2"

[dev-dependencies]
rand = "0.9"
bevy_flycam = "0.17"
bevy-inspector-egui = "0.35"
