[package]
name = "minehex_sky"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM sky module scaffold for MineHex"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
